- randomize default movie display - add safe navigation when formatting movie year in Movie component - fix layout display issue on mobile phones with tab-lize screens - ignore .DS_store

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -83,6 +83,9 @@
     justify-content: center;
     /* padding: 0px 10px 0px 10px */
 }
+.header-title h1 {
+    font-size: 1rem;
+}
 .header-child{
     width: 70%;
     height: 100%;
@@ -215,6 +218,7 @@
     }
     .movie-container{
         width: 48%;
+        min-width: 300px;
     }
     .movie-poster-holder{
         width: 100%
@@ -243,6 +247,9 @@
         height: 40%;
         align-items: flex-end;
         /* border: 1px solid yellow; */
+    }
+    .header-title h1 {
+        font-size: 2rem;
     }
     .header-child{
         width: 100%;
